<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard"
    >

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.medicareapp.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_log"
        android:name="com.example.medicareapp.ui.log.LogFragment"
        android:label="@string/title_log"
        tools:layout="@layout/fragment_log" />

    <fragment
        android:id="@+id/navigation_activities"
        android:name="com.example.medicareapp.ui.activities.ActivitiesFragment"
        android:label="@string/title_activities"
        tools:layout="@layout/fragment_activities" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.medicareapp.ui.activities.ActivitiesFragment"
        android:label="@string/title_activities"
        tools:layout="@layout/fragment_activities" />
</navigation>