<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical"
    tools:context=".measurements.WeightActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:text="@string/weight_record"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#C8E0474C"
        android:padding="15dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/record_button"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="10dp"
                android:contentDescription="@string/record_button"
                android:src="@android:drawable/arrow_down_float"
                android:tint="#ffffff" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="15dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:padding="10dp"
            android:showDividers="beginning|end|middle">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#C8E04747"
                android:padding="10dp"
                android:text="@string/time_display"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/time_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:clickable="true"
                android:focusable="true"
                android:hint="day-time"
                android:padding="10dp"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="0.0"

            android:textColor="#C8E0474C"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/tv_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/tv_value"
            android:paddingTop="4dp"
            android:text="kg"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />
    </RelativeLayout>

    <com.zjun.widget.RuleView
        android:id="@+id/gv_1"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:padding="50dp"
        app:zjun_textSize="18sp" />


    <Button
        android:id="@+id/btn_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:onClick="onClick"
        android:text="@string/change_button"
        android:textAllCaps="false" />


</LinearLayout>